--- a/config/database.yml
+++ b/config/database.yml
@@ -41,6 +41,5 @@ test:
   password:
 
 production:
-  <<: *default
   adapter: postgresql
-  database: db/production.sqlite3
+  database: amazon_production
